@@ -25,6 +25,7 @@ import java.nio.charset.StandardCharsets;
 import org.apache.http.HttpEntity;
 import org.apache.http.client.methods.HttpDelete;
 import org.apache.http.client.methods.HttpGet;
+import org.apache.http.client.methods.HttpHead;
 import org.apache.http.client.methods.HttpPost;
 import org.apache.http.client.methods.HttpPut;
 import org.apache.http.client.methods.HttpUriRequest;
@@ -112,9 +113,23 @@ public class RestTestHarness extends BaseTestHarness implements Closeable {
   }
 
   /**
-   * Processes a PUT request using a URL path (with no context path) + optional query params,
-   * e.g. "/schema/fields/newfield", PUTs the given content, and returns the response content.
-   * 
+   * Processes a HEAD request using a URL path (with no context path) + optional query params and
+   * returns the response content.
+   *
+   * @param request The URL path and optional query params
+   * @return The response to the HEAD request
+   */
+  public String head(String request) throws IOException {
+    HttpHead httpHead = new HttpHead(getBaseURL() + request);
+    return httpClient
+        .execute(httpHead, HttpClientUtil.createNewHttpClientRequestContext())
+        .toString();
+  }
+
+  /**
+   * Processes a PUT request using a URL path (with no context path) + optional query params, e.g.
+   * "/schema/fields/newfield", PUTs the given content, and returns the response content.
+   *
    * @param request The URL path and optional query params
    * @param content The content to include with the PUT request
    * @return The response to the PUT request
